--- a/week-5/css/main.css
+++ b/week-5/css/main.css
@@ -38,7 +38,7 @@ a:link{
 }
 
 a:visited{
-    color:plum;
+    color:pink;
 }
 
 a:hover{
@@ -56,7 +56,7 @@ color: rgb(206, 131, 131);
 }
 
 a:visited{
-    color:plum;
+    color:pink;
 }
 
 a:hover{
