--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -24,10 +24,16 @@ color:purple;
     }
 
     a:link {
-        
         text-decoration:none;
       }
       
+    a:link {
+        background-color:powderblue;
+    }
+    a:link {
+        border-width:10px;
+    }
+
     a:hover {
         background-color:pink;
       }
