--- a/week-6/css/styles.css
+++ b/week-6/css/styles.css
@@ -2,7 +2,8 @@ body {
    font-family: verdana, sans-serif;
    font-size:16px;
    line-height: 1.5;
-   background-color: rgb(182, 176, 176)
+   background-color:#eee;
+   background-image:url("../images/white_brick_wall.png");
 }
 
 .bolded {
