--- a/week-6/css/styles.css
+++ b/week-6/css/styles.css
@@ -1,4 +1,4 @@
-html{
+html {
     font-size:16px;
 }
 
@@ -10,6 +10,15 @@ body {
    background-image:url("../images/white_brick_wall.png");
    background-repeat: no-repeat;
    background-position: 10px 20px;
+}
+
+header {
+    color: white;
+    background-color:pink;
+  background-image:url("../images/bread.jpg");
+  background-size:cover;
+  height: 100vh;
+   
 }
 
 h1 {
