--- a/midterm/css/styles.css
+++ b/midterm/css/styles.css
@@ -10,6 +10,7 @@ top:50%;
 left: 50%;
 }
 
+
 /* modifies article about starfish */
 h2{
     font-family: sans-serif;
@@ -22,5 +23,7 @@ article img {
 }
 article p{
 font-family: sans-serif;
-text-align: wrap;
+}
+article ul{
+    font-family:sans-serif;
 }
