created contact form

--- a/midterm/css/styles.css
+++ b/midterm/css/styles.css
@@ -27,3 +27,9 @@ font-family: sans-serif;
 article ul{
     font-family:sans-serif;
 }
+form{
+    font-family: sans-serif;
+}
+h4{
+    font-family: sans-serif;
+}
