finishes html supposedly

--- a/midterm/css/styles.css
+++ b/midterm/css/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #aad4cf;
+    background-color: #d4e9e7;
 }
 /* modifies page header */
 .LoneStarfish{
@@ -21,15 +21,39 @@ article img {
  float: left;
  padding: 10px;
 }
-article p{
+article p {
 font-family: sans-serif;
 }
-article ul{
-    font-family:sans-serif;
+article ul {
+font-family:sans-serif;
 }
+
+/* creates box that contains form */
 form{
     font-family: sans-serif;
+    border: 1px solid black;
+    padding: 16px;
 }
-h4{
+
+/* question in form */
+h3{
     font-family: sans-serif;
+    font-size: 16px;
+}
+
+/* modifies submit button */
+.button {
+    font-family:sans-serif;
+    background:#d4e9e7;
+    color:black;
+    border-style:outset;
+    border-color:black 1px;
+    height:40px;
+    width:65px;
+}
+
+/* copyright footer */
+footer{
+    font-family: sans-serif;
+    text-align: right;
 }
