--- a/midterm/css/styles.css
+++ b/midterm/css/styles.css
@@ -1,3 +1,4 @@
+/* creates a layout for the page */
 html {
     background-color:#aad4cf;
     margin: 0 16%;
@@ -6,14 +7,15 @@ body{
     background-color:#d4e9e7;
     margin: 0;
 }
-/* modifies page header */
-.header {
-background-image: url('../images/lone-starfish-wide.jpg');
-background-repeat: no-repeat; 
-width: 100%;
-height: 280px;
-display: Block;
-float: left;
+
+/* modifies page header using a class and the header tag*/
+.header { /* fixes background image */
+    background-image: url('../images/lone-starfish-wide.jpg');
+    background-repeat: no-repeat; 
+    width: 100%;
+    height: 280px;
+    display: Block;
+    float: left;
 }
 
 header{
@@ -22,14 +24,14 @@ header{
     display: Block;
 }
 
-h1{
-font-family: sans-serif;
-color: white;
-position: absolute;
-top: 20%;
-left: 47%;
-font-size: 40px;
-font-weight: normal;
+h1{ /* fixes title */
+    font-family: sans-serif;
+    color: white;
+    position: absolute;
+    top: 20%;
+    left: 47%;
+    font-size: 40px;
+    font-weight: normal;
 }
 
 /* customizing navigation bar */
@@ -57,7 +59,7 @@ nav {
     position: relative;
     padding: 6px 30px;
 }
-
+/* Makes only the 2nd and 3rd line appear */
 .nav li:last-child{
     border-right: 0;
 }
@@ -66,18 +68,19 @@ nav {
 h2{
     font-family: sans-serif;
 }
+
 /* makes image float and wraps text around it */
 article img {
- width: 250px;
- height: 250px;
- float: left;
- padding: 10px;
+    width: 250px;
+    height: 250px;
+    float: left;
+    padding: 10px;
 }
 article p {
-font-family:sans-serif ;
+    font-family:sans-serif ;
 }
 article ul {
-font-family:sans-serif;
+    font-family:sans-serif;
 }
 
 /* creates box that contains form */
@@ -106,20 +109,20 @@ form{
 }
 
 #message {
-width: 98%;
-height: 50px;
-background-color:white;
-border-color: white;
-margin: 5px 0;
+    width: 98%;
+    height: 50px;
+    background-color:white;
+    border-color: white;
+    margin: 5px 0;
 }
 
-/* question in form */
+/* modifies question in form */
 h3{
     font-family: sans-serif;
     font-size: 16px;
 }
 
-/* modifies submit button */
+/* customises submit button */
 .button {
     font-family:sans-serif;
     background:#d4e9e7;
@@ -129,7 +132,7 @@ h3{
     width:65px;
 }
 
-/* copyright footer */
+/* modifies copyright footer */
 footer{
     font-family: sans-serif;
     text-align: right;
