--- a/midterm/css/styles.css
+++ b/midterm/css/styles.css
@@ -8,23 +8,15 @@ body{
     margin: 0;
 }
 
-/* modifies page header using a class and the header tag*/
-.header { /* fixes background image */
-    background-image: url('../images/lone-starfish-wide.jpg');
-    background-repeat: no-repeat; 
-    width: 100%;
-    height: 280px;
-    display: Block;
-    float: left;
-}
-
-header{
+/* modifies image in header*/
+header img{
     width: 100%;
     height: 280px;
     display: Block;
 }
 
-h1{ /* fixes title */
+/* fixes title */
+h1{ 
     font-family: sans-serif;
     color: white;
     position: absolute;
@@ -64,12 +56,13 @@ nav {
     border-right: 0;
 }
 
-/* modifies article about starfish */
+/* modifies h2 titles on page */
 h2{
     font-family: sans-serif;
+    margin:16px;
 }
 
-/* makes image float and wraps text around it */
+/* makes image float and wraps text around it in the article */
 article img {
     width: 250px;
     height: 250px;
