--- a/final-project/css/styles.css
+++ b/final-project/css/styles.css
@@ -76,15 +76,20 @@ nav .homea{
 }
 
 
-.section-about{
-    background-color: #ffe6ac;
-}
+
 h1{
     font-weight: bold;
 }
-
+h2{
+	font-weight: bold;
+	font-size: 40px;
+}
+h3{ 
+	font-weight: bold;
+	font-size: 30px;
+}
 .button1{
-	background-color: #c78c06; /* Green */
+	background-color: #c78c06; 
   	border: none;
   	color: #222;
   	padding: 25px 32px;
@@ -94,8 +99,32 @@ h1{
   	font-size: 20px;
 }
 
+.section-about{
+    background-color: #ffe6ac;
+	padding: 10px;
+}
+.section-about img{
+	width: 100%;
+	height: auto;
+}
+.section-about h2,p{
+	padding: 10px;
+}
+
+.digital{
+	background-color: #ffe6ac;
+}
+.digital img{
+	width: 100%;
+}
+.digital h3,p{
+	padding: 10px;
+}
+
+ 
+
 .buttons{
-	background-color: #222; /* Green */
+	background-color: #222; 
   	border: none;
   	color: white;
   	padding: 25px 32px;
@@ -104,3 +133,13 @@ h1{
   	display: inline-block;
   	font-size: 20px;
 }
+
+footer{
+	background-color: #222;
+	color: #c78c06;
+	padding: 10px;
+}
+footer a{
+	text-decoration: none;
+	color: #c78c06;
+}	
